@startuml

title __GUESSWHEREAPP's Class Diagram__\n

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.Database_test {
        {static} + create_user()
        {static} + database_check()
        {static} + request_access_token()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.GameScreen {
        # onCreate()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.HelpScreen {
        + returnToMain()
        # onCreate()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.LoginScreen {
        + openDialog()
        + startRegisterActivity()
        # onCreate()
        - do_what_login_button_does()
        - reload_main()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.MainScreen {
        {static} + popupMessage : String
        {static} + user : User
        {static} + whichPopup : int
        + MainScreen()
        + openDialog()
        + startHelpActivity()
        + startLoginActivity()
        + startOptionsActivity()
        # onCreate()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.OptionsScreen {
        {static} + whichscreen : int
        + startAnotherOptionsActivity()
        # onCreate()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.Popup {
        + onCreateDialog()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.RegisterScreen {
        + openDialog()
        # onCreate()
        - clicked_confirm()
        - reload_main()
        - try_creating_user()
    }
  }
  

  namespace com.example.guesswhereapp {
    class com.example.guesswhereapp.User {
        - AccessToken : String
        - Username : String
        + checkCredentials()
        + getAccessToken()
        + getUsername()
        {static} + new_user_instance()
        - User()
    }
  }
  

  com.example.guesswhereapp.Database_test -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.GameScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.HelpScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.LoginScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.MainScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.OptionsScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.Popup -up-|> androidx.appcompat.app.AppCompatDialogFragment
  com.example.guesswhereapp.RegisterScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.guesswhereapp.User -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
